--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -6,9 +6,9 @@ name: Tests
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: '**'
   pull_request:
-    branches: [ main ]
+    branches: '**'
 
 jobs:
   build:
