--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -1,10 +1,6 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Tests
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: '**'
   pull_request:
@@ -15,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Run test script
+      - name: Starting up Python
         uses: actions/setup-python@v3
         with:
           python-version: 3.8
